--- a/style.css
+++ b/style.css
@@ -24,3 +24,17 @@ h1{
     padding-left:25px;
 }
 
+@media(max-width:800px){
+    #grid{
+        display:block;
+    }
+    #grid ol{
+        border-right:none;
+    }
+    h1{
+        border-bottom:none;
+    }
+    #article{
+        padding:20px;
+    }
+}
